--- a/bubble.tex
+++ b/bubble.tex
@@ -5,4 +5,19 @@ O algoritmo de bolha é um algoritmo cuja complexidade é, assim como o anterior
 Na primeira passagem, o maior valor da lista (4) estará em seu lugar correto, ou seja, M será [3,2,1,0,4]. Na segunda passagem, o segundo maior elemento também estará posicionado em sua posição correta; assim, M será [2,1,0,3,4].
 
 O algoritmo continuará realizando "isto" até que, na 5º passagem, (pois a lista possui 5 elementos), a lista estará totalmente ordenada.
-Portanto, assim como no algoritmo anterior, o Bolha é eficiente apenas para listas com tamanhos pequenos.
+
+\begin{python}
+def bubble(V, n):
+    lim = n - 1
+    while lim >= 0:
+        isIncreasing = True
+        for j in range(lim):
+            if V[j] > V[j + 1]:
+                isIncreasing = False
+                V[j], V[j + 1] = V[j + 1], V[j]
+        if(isIncreasing==True): 
+                break
+        lim -= 1
+\end{python}
+
+De acordo com o código, constata-se que, ao contrário do algoritmo anterior, este não realizará todas as etapas caso a lista já esteja ordenada, pois a variável $isIncreasing$ indica se a lista já se encontra ou não ordenada.
