fix the timeMe function and improve the latex code

--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,70 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bubble(V, n):\n",
-    "    global iti\n",
-    "    lim = n - 1\n",
-    "    while lim >= 0:\n",
-    "        isIncreasing = True\n",
-    "        for j in range(lim):\n",
-    "            iti+=1\n",
-    "            if V[j] > V[j + 1]:\n",
-    "                isIncreasing = False\n",
-    "                V[j], V[j + 1] = V[j + 1], V[j]\n",
-    "        if(isIncreasing==True): \n",
-    "                break\n",
-    "        lim -= 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def embaralha(V, n, p):\n",
-    "    for _ in range(int(n * p / 2)):\n",
-    "        num1 = randint(0, n - 1)\n",
-    "        num2 = randint(0, n - 1)\n",
-    "        V[num1], V[num2] = V[num2], V[num1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uga\n"
+      "5050\n",
+      "5050.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "611.7122622999959"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "iti = 0\n",
-    "V = [_ for _ in range(90000)]\n",
-    "embaralha(V,len(V),0.001)\n",
-    "print('uga')\n",
-    "start = mytime()\n",
-    "bubble(V, len(V))\n",
-    "end = mytime()\n",
-    "end-start"
+    "n = 100\n",
+    "V = [randint(0,999)for _ in range(n)]\n",
+    "def selection(V):\n",
+    "    global iti\n",
+    "    for i in range(0, n):\n",
+    "        smallest_num_index = i\n",
+    "        \n",
+    "        for j in range(i, n):\n",
+    "            iti+=1\n",
+    "            if V[j] < V[smallest_num_index]:\n",
+    "                smallest_num_index = j\n",
+    "        V[i], V[smallest_num_index] = V[smallest_num_index], V[i]\n",
+    "selection(V)\n",
+    "print(iti)\n",
+    "print(n*(n+1)/2)"
    ]
   }
  ],
