--- a/bubble.tex
+++ b/bubble.tex
@@ -6,7 +6,7 @@ Na primeira passagem, o maior valor da lista (4) estará em seu lugar correto, o
 
 O algoritmo continuará realizando "isto" até que, na 5º passagem, (pois a lista possui 5 elementos), a lista estará totalmente ordenada.
 
-\begin{python}
+\begin{lstlisting}
 def bubble(V, n):
     lim = n - 1
     while lim >= 0:
@@ -18,6 +18,6 @@ def bubble(V, n):
         if(isIncreasing==True): 
                 break
         lim -= 1
-\end{python}
+\end{lstlisting}
 
 De acordo com o código, constata-se que, ao contrário do algoritmo anterior, este não realizará todas as etapas caso a lista já esteja ordenada, pois a variável $isIncreasing$ indica se a lista já se encontra ou não ordenada.
