add more texts about each algorithm and examples

--- a/app.ipynb
+++ b/app.ipynb
@@ -47,6 +47,62 @@
     "print(iti)\n",
     "print(n*(n+1)/2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_element_in_array(n, V):\n",
+    "    result = 0\n",
+    "    for i in V:\n",
+    "        if i == n:\n",
+    "            result += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def counting(V, n):\n",
+    "    max_element = max(V)\n",
+    "    hist_list = [0 for _ in range(max_element + 1)]\n",
+    "    for i in range(max_element + 1):\n",
+    "        hist_list[i] = count_element_in_array(i, V)\n",
+    "    index = 0\n",
+    "    for i in range(max_element + 1):\n",
+    "        for _ in range(hist_list[i]):\n",
+    "            print(V)\n",
+    "            V[index] = i\n",
+    "            index += 1\n",
+    "    print(V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1, 0]\n",
+      "[0, 3, 2, 1, 0]\n",
+      "[0, 1, 2, 1, 0]\n",
+      "[0, 1, 2, 1, 0]\n",
+      "[0, 1, 2, 3, 0]\n",
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "counting([4,3,2,1,0],5)\n"
+   ]
   }
  ],
  "metadata": {
