--- a/count.tex
+++ b/count.tex
@@ -4,3 +4,13 @@ Diferentemente dos algoritmos outrora apresentados, o algoritmo em tópico possu
 Em relação ao uso de memória, contudo, há uma grande desvantagem no algoritmo, uma vez que a lista auxiliar utilizada possuirá $\max{lista}-\min{lista} $ elementos; ou seja, caso o maior elemento seja 5000 e o menor 1000, a lista auxiliar terá um tamanho de 4000 elementos.
 
 Dessa forma, o algoritmo possui um melhor proveito se utilizado para listas com pouca variação de tamanho entre os seus elementos.
+
+Segue, a seguir, os valores de \code{V} a cada modificação:
+\begin{lstlisting}
+[4, 3, 2, 1, 0]
+[0, 3, 2, 1, 0]
+[0, 1, 2, 1, 0]
+[0, 1, 2, 1, 0]
+[0, 1, 2, 3, 0]
+[0, 1, 2, 3, 4]
+\end{lstlisting}
