--- a/count.tex
+++ b/count.tex
@@ -14,3 +14,6 @@ Segue, a seguir, os valores de \code{V} a cada modificação:
 [0, 1, 2, 3, 0]
 [0, 1, 2, 3, 4]
 \end{lstlisting}
+
+Notoriamente, a lista, durante as mudanças intermediárias, não possui todos os valores iniciais, isto é, alguns dos elementos (como o 4) deixam de existir em alguma etapa e voltam a aparecer somente depois. Esta conduta é explicada pela diferença em que o código é executado: 
+%TODO dizer que é criado um histograma e tudo mais.
