--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,27 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def counting(V, n):\n",
-    "    max_element = max(V)\n",
-    "    hist_list = [0 for _ in range(max_element + 1)]\n",
-    "    for i in range(max_element + 1):\n",
-    "        hist_list[i] = count_element_in_array(i, V)\n",
-    "    index = 0\n",
-    "    for i in range(max_element + 1):\n",
-    "        for _ in range(hist_list[i]):\n",
-    "            print(V)\n",
-    "            V[index] = i\n",
-    "            index += 1\n",
-    "    print(V)"
+    "def selection(V, n):\n",
+    "    for i in range(0, n):\n",
+    "        smallest_num_index = i\n",
+    "        for j in range(i, n):\n",
+    "            if V[j] < V[smallest_num_index]:\n",
+    "                smallest_num_index = j\n",
+    "        print(V)\n",
+    "        V[i], V[smallest_num_index] = V[smallest_num_index], V[i]\n",
+    "    print(V)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -92,16 +89,16 @@
      "output_type": "stream",
      "text": [
       "[4, 3, 2, 1, 0]\n",
-      "[0, 3, 2, 1, 0]\n",
-      "[0, 1, 2, 1, 0]\n",
-      "[0, 1, 2, 1, 0]\n",
-      "[0, 1, 2, 3, 0]\n",
+      "[0, 3, 2, 1, 4]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3, 4]\n",
       "[0, 1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
-    "counting([4,3,2,1,0],5)\n"
+    "selection([4,3,2,1,0],5)\n"
    ]
   }
  ],
