--- a/selection.tex
+++ b/selection.tex
@@ -21,6 +21,7 @@ Assim, seguem as impressões da lista a cada modificação.
 
 Percebe-se que, mesmo a lista já estando ordenada, o algoritmo continuará realizando os comandos, ou seja, o número de passagens a ser feita não é mudado devido às condições iniciais de ordenação.
 
+\newpage
 \subsection*{Implementação}
 A seguir, segue a implementação do código em Python.
 
