--- a/bubble.tex
+++ b/bubble.tex
@@ -23,6 +23,7 @@ Destarte, seguem as impressões da lista a cada modificação realizada.
 
 Perceptivelmente, o maior elemento é, a cada modificação, levado uma posição para a direita, até que o elemento esteja na posição correta. De fato, o nome do algoritmo faz referência às bolhas em bebidas, uma vez que as bolhas maiores sobem mais rapidamente do que as menores.
 
+\newpage
 \subsection{Implementação}
 Segue, a seguir, o código utilizado na implementação do algoritmo em questão em Python:
 
@@ -50,8 +51,7 @@ Como a quantidade de comparações realizadas pelo bolha depende da lista, anali
 
 Caso a lista com $n$ elementos já esteja 100\% ordenada, o algoritmo detectará "isto" na primeira passagem, pois a variável \code{isIncrease} continuará com o seu valor booleano verdadeiro após a malha de repetição mostrada na implementação, ou seja, serão realizadas $n$ comparações.
 
-Por outro lado, na hipótese da lista está totalmente desordenada, haverá $n(n+1)\over 2$
-%TODO dissertar mais
+Por outro lado, na hipótese da lista está totalmente desordenada, haverá $n(n+1)\over 2$ comparações. 
 
-Finalmente, nos outros casos, a análise é mais complexa e depende de outros fatores que não estão no escopo da análise. Contudo, em casos nos quais a lista não está nem ordenada nem totalmente desordenada, o algoritmo possui um comportamento quadrático.
+Finalmente, nos outros casos, a análise é mais complexa e depende de outros fatores que não estão no escopo da análise. Contudo, em casos nos quais a lista não está nem ordenada nem totalmente desordenada, o algoritmo possui um comportamento quadrático\cite{bubblecomplexity}.
 %TODO citar fonte
