--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,41 +64,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def selection(V, n):\n",
-    "    for i in range(0, n):\n",
-    "        smallest_num_index = i\n",
-    "        for j in range(i, n):\n",
-    "            if V[j] < V[smallest_num_index]:\n",
-    "                smallest_num_index = j\n",
-    "        print(V)\n",
-    "        V[i], V[smallest_num_index] = V[smallest_num_index], V[i]\n",
-    "    print(V)\n"
+    "def counting(V, n):\n",
+    "    print(\"Aux\")\n",
+    "    max_element = max(V)\n",
+    "    hist_list = [0 for _ in range(max_element + 1)]\n",
+    "    for i in range(max_element + 1):\n",
+    "        print(hist_list)\n",
+    "        hist_list[i] = count_element_in_array(i, V)\n",
+    "    print(hist_list)\n",
+    "    print('M')\n",
+    "    index = 0\n",
+    "    for i in range(max_element + 1):\n",
+    "        for _ in range(hist_list[i]):\n",
+    "            print(V)\n",
+    "            V[index] = i\n",
+    "            index += 1\n",
+    "    print(V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 3, 2, 1, 0]\n",
-      "[0, 3, 2, 1, 4]\n",
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4]\n",
-      "[0, 1, 2, 3, 4]\n"
+      "Aux\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[1, 0, 0, 0, 0]\n",
+      "[1, 1, 0, 0, 0]\n",
+      "[1, 1, 3, 0, 0]\n",
+      "[1, 1, 3, 1, 0]\n",
+      "[1, 1, 3, 1, 2]\n",
+      "M\n",
+      "[4, 2, 3, 1, 4, 2, 2, 0]\n",
+      "[0, 2, 3, 1, 4, 2, 2, 0]\n",
+      "[0, 1, 3, 1, 4, 2, 2, 0]\n",
+      "[0, 1, 2, 1, 4, 2, 2, 0]\n",
+      "[0, 1, 2, 2, 4, 2, 2, 0]\n",
+      "[0, 1, 2, 2, 2, 2, 2, 0]\n",
+      "[0, 1, 2, 2, 2, 3, 2, 0]\n",
+      "[0, 1, 2, 2, 2, 3, 4, 0]\n",
+      "[0, 1, 2, 2, 2, 3, 4, 4]\n"
      ]
     }
    ],
    "source": [
-    "selection([4,3,2,1,0],5)\n"
+    "M = [4,2,3,1,4,2,2,0]\n",
+    "counting(M,len(M))\n"
    ]
   }
  ],
