--- a/app.ipynb
+++ b/app.ipynb
@@ -119,6 +119,48 @@
     "M = [4,2,3,1,4,2,2,0]\n",
     "counting(M,len(M))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bubble(V, n):\n",
+    "    iti = 0\n",
+    "    lim = n - 1\n",
+    "\n",
+    "    while lim >= 0:\n",
+    "        iti+=1\n",
+    "        isIncreasing = True\n",
+    "        for j in range(lim):\n",
+    "            if V[j] > V[j + 1]:\n",
+    "                isIncreasing = False\n",
+    "                V[j], V[j + 1] = V[j + 1], V[j]\n",
+    "        if isIncreasing == True:\n",
+    "            break\n",
+    "        lim -= 1\n",
+    "    return iti\n",
+    "bubble([4,3,2,1,0],5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
