--- a/selection.tex
+++ b/selection.tex
@@ -1,7 +1,6 @@
 \section{Algoritmo de seleção}
-O algoritmo de Seleção é um algoritmo de ordenação no qual, a cada itineração, o menor elemento da lista é garantido estar na posição correta. Ou seja, na primeira itineração, assegura-se que o menor elemento ficará na primeira posição da lista, na segunda itineração, o segundo elemento, e assim por diante. 
-
-Acerca do seu desempenho, o algoritmo em questão possui um "desempenho" quadrático, isto é, para $n$ elementops da lista, o algoritmo realizará $\frac{n(n+1)}{2}$ comparações a fim de ordernar totalmente a lista. Uma observação pertinente é que a quantidade de comparações a ser feita independe da porcentagem de ordenação da lista.
+O algoritmo de seleção é um algoritmo de ordenação no qual, a cada itineração, o menor elemento da lista é garantido estar na posição correta. Ou seja, na primeira itineração, assegura-se que o menor elemento ficará na primeira posição da lista, na segunda itineração, o segundo elemento, e assim por diante. 
+Uma observação pertinente é que a quantidade de comparações a ser feita independe da porcentagem de ordenação da lista.
 
 \subsection{Exemplo}
 Seja M uma lista \code{[4,3,2,1,0]}. Na primeira passagem, o algoritmo detectará o menor elemento da lista e, logo após, irá permutá-lo com o primeiro elemento da lista, ou seja, o elemento 4 e 0 serão trocados de lugar. Na segunda passagem, começando pelo segundo elemento, a segunda malha de repetição irá detectar o segundo menor elemento e, similarmente, irá permutá-lo com o segundo elento da lista. Nas próximas execuções, a forma é análoga.
@@ -39,7 +38,6 @@ def selection(V, n):
 \subsection{Quantidade de comparações}
 Nesta subseção, irá ser debatida a quantidade de comparações feitas pelo algoritmo em questão. Como a quantidade de comparações é "constante" neste algoritmo, será "fácil" de analisá-la; nos outros algoritmos, contudo, a análise é mais compléxa devido à oscilação na quantidade de comparações.
 
-Suponha-se que o algoritmo recebeu uma lista com $n$ elementos. Assim, como não há um dispositivo que pare o código antes, tem-se que, a primeira malha de repetição será executada $n$ vezes, em que a primeira $i=1$, na segunda, $i=2$ e assim por diante. Por consequência, em cada uma dessas execuções, a segunda malha será executada $n-i$ vezes (isto é, na primeira execução, o código contido na segunda malha de repetição será executado $n$ vezes, na segunda, $n-1$, nas seguntes a lógica é análoga.). Dessa forma, o código será executado $n+(n-1)+(n-2)+...+(1)$, ou seja, $\sum_{i=1}^n i = \frac{n(n+1)}{2}$
-%TODO ver depois se está correto
+Suponha-se que o algoritmo recebeu uma lista com $n$ elementos. Assim, como não há um dispositivo que pare o código antes, tem-se que a primeira malha de repetição será executada $n$ vezes, em que o índice inicial $i=1$, na segunda, quando o índice $i=2$ e assim por diante. Por consequência, em cada uma dessas execuções, a segunda malha (que está dentro da primeira) será executada $n-i$ vezes, ou seja, na primeira execução, o código contido na segunda malha de repetição será executado $n$ vezes, na segunda, $n-1$, e assim por diante. Dessa forma, o código será executado $n+(n-1)+(n-2)+\cdots+(1)$, ou seja, $\sum_{i=1}^n i = \frac{n(n+1)}{2}$
 
 Notavelmente, não há variações na quantidade de comparações, ou seja, independente do estado inicial da lista, a forma como o código será executado é a mesma.
